[package]
name = "karreidos"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
derive_builder = "0.11.2"
env_logger = "0.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
log = "0.4.17"
paste = "1.0.8"
thiserror = "1.0.32"
