[package]
name = "karreidos"
authors = ["Yuna Tomida <ytomida.mmm@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []

[dependencies]
clap = { version = "3.2.17", features = ["cargo", "derive"] }
derive_builder = "0.11.2"
env_logger = "0.9.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "c77d05639c9b73d9bede713789b9707d45863530", features = ["llvm15-0"] }
llvm-sys = "150.0.3"
log = "0.4.17"
once_cell = "1.17.0"
paste = "1.0.8"
thiserror = "1.0.32"
